<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_option_dinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/question_icon"
        android:title="@string/what_will_be_on_a_dinner_menu_option_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_option_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile_menu_option_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_option_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/settings_icon"
        android:title="@string/settings_menu_option_text"
        app:showAsAction="ifRoom" />
</menu>